# vue2-gen-code

./: .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.vue  main.ts  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/db/: mod.rs  renderer.rs  template.rs
src/components/: index.ts
src/components/FilterBarConfig/: index.ts  index.vue
src/components/JsonFormat/: index.vue
src/components/TableConfig/: index.ts  index.vue
src/pages/dashboard/: index.vue
src/pages/gen-code/: index.vue
src/pages/gen-code/output/: index.ts  index.vue
src/pages/gen-code/renderer/: index.vue
src/pages/gen-code/template/: index.vue
src/pages/home/: index.vue  teamplate.ts
src/pages/layout/: index.vue
src/pages/layout/components/menu/: index.vue
src/routers/: index.ts
src/routers/gen-code/: index.ts
src/utils/: index.ts
